sgd/reproduction/playground/objects/SVMXC__Quote_Line__c.object
<CustomObject>
    <customHelpPage>SVMXC__SVMX_LaunchHelp</customHelpPage>
    <description>In ServiceMax, Quote contains the estimated cost of a service event to be presented to a customer to get approval. A quote can be either created manually or generated automatically from the estimate lines of a service order. The estimates normally include parts, labor and other expenses.</description>
    <fields>
        <fullName>SMAX_PS_Activity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Activity</label>
        <referenceTo>SVMXC__Activity_Master__c</referenceTo>
        <relationshipLabel>Quote Items</relationshipLabel>
        <relationshipName>Quote_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Item_Name__c</fullName>
        <label>見積品目名</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Service_Pricebook_Entry__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Pricebook Entry</label>
        <referenceTo>SVMXC__Service_Pricebook_Entry__c</referenceTo>
        <relationshipLabel>Quote Items</relationshipLabel>
        <relationshipName>Quote_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Service_Quote_IP_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Quote IP Line</label>
        <referenceTo>SMAX_PS_Service_Quote_IP_Line__c</referenceTo>
        <relationshipLabel>Quote Items</relationshipLabel>
        <relationshipName>Quote_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Discount_Type__c</fullName>
        <description>Select the Discount Type</description>
        <inlineHelpText>Select the Discount Type</inlineHelpText>
        <label>Discount Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Percent</fullName>
                </value>
                <value>
                    <fullName>Amount</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Discount__c</fullName>
        <description>Discount (Amount or percentage) for the line</description>
        <inlineHelpText>Discount (Amount or percentage) for the line</inlineHelpText>
        <label>Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Line_Description__c</fullName>
        <description>Detailed description of the quote line</description>
        <inlineHelpText>Detailed description of the quote line</inlineHelpText>
        <label>Line Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SVMXC__Line_Price2__c</fullName>
        <description>Final line price after applying discount</description>
        <inlineHelpText>Final line price after applying discount</inlineHelpText>
        <label>Line Price</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SVMXC__Line_Type__c</fullName>
        <description>Indicates if the line refers to a part, labor or expense estimate</description>
        <inlineHelpText>Indicates if the line refers to a part, labor or expense estimate</inlineHelpText>
        <label>Line Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Parts</fullName>
                </value>
                <value>
                    <fullName>Labor</fullName>
                </value>
                <value>
                    <fullName>Expense</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the product if line type is Parts. Is a lookup to an existing salesforce product record.</description>
        <inlineHelpText>Name of the product if line type is Parts. Is a lookup to an existing salesforce product record.</inlineHelpText>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>Quote_Line</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Quantity2__c</fullName>
        <description>Number of units. This depends upon the line type</description>
        <inlineHelpText>Number of units. This depends upon the line type</inlineHelpText>
        <label>Qty</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Quote__c</fullName>
        <description>Name of the quote. Is a lookup to an existing quote in ServiceMax</description>
        <inlineHelpText>Name of the quote. Is a lookup to an existing quote in ServiceMax</inlineHelpText>
        <label>Service Quote</label>
        <referenceTo>SVMXC__Quote__c</referenceTo>
        <relationshipLabel>Quote Items</relationshipLabel>
        <relationshipName>Quote_Line</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SVMXC__Select__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to bind checkbox in List of Quote item records on Visualforce page with controller.</description>
        <inlineHelpText>Field to bind checkbox in List of Quote item records on Visualforce page with controller.</inlineHelpText>
        <label>Select</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Service_Order_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Service Order estimates line record using which this quote line was created. Not displayed on the screen.</description>
        <inlineHelpText>Service Order estimates line record using which this quote line was created. Not displayed on the screen.</inlineHelpText>
        <label>Work Details</label>
        <referenceTo>SVMXC__Service_Order_Line__c</referenceTo>
        <relationshipLabel>Quote Items</relationshipLabel>
        <relationshipName>Quote_Line</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Unit_Price2__c</fullName>
        <description>Price per unit of the line. Product cost if it is a Parts line, hourly charges if it is labor and so on</description>
        <inlineHelpText>Price per unit of the line. Product cost if it is a Parts line, hourly charges if it is labor and so on</inlineHelpText>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <label>Quote Item</label>
    <nameField>
        <displayFormat>QL-{00000000}</displayFormat>
        <label>Quote Line ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quote Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>